added auth to nav

--- a/static/base.css
+++ b/static/base.css
@@ -98,6 +98,9 @@ div.awesomplete > ul {
   display: flex;
   justify-content: space-between;
 }
+.flex-nave-item:nth-child(1) {
+  flex-basis: 15%;
+}
 
 @media only screen and (min-width: 801px) {
   .flex-charts {
